sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/README.md
# @azure/arm-newrelicobservability client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-newrelicobservability in some common scenarios.

| **File Name**                                                                                 | **Description**                                                                                                                                                                                                                                                                                                               |
| --------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [accountsListSample.js][accountslistsample]                                                   | lists all the New Relic accounts linked to your email address, helping you understand the existing accounts that have been created x-ms-original-file: 2026-06-01/Accounts_List_MaximumSet_Gen.json                                                                                                                           |
| [billingInfoGetSample.js][billinginfogetsample]                                               | a synchronous resource action. x-ms-original-file: 2026-06-01/BillingInfo_Get.json                                                                                                                                                                                                                                            |
| [connectedPartnerResourcesListSample.js][connectedpartnerresourceslistsample]                 | a synchronous resource action. x-ms-original-file: 2026-06-01/ConnectedPartnerResources_List.json                                                                                                                                                                                                                             |
| [monitoredSubscriptionsCreateOrUpdateSample.js][monitoredsubscriptionscreateorupdatesample]   | create a MonitoredSubscriptionProperties x-ms-original-file: 2026-06-01/MonitoredSubscriptions_CreateOrUpdate.json                                                                                                                                                                                                            |
| [monitoredSubscriptionsDeleteSample.js][monitoredsubscriptionsdeletesample]                   | delete a MonitoredSubscriptionProperties x-ms-original-file: 2026-06-01/MonitoredSubscriptions_Delete.json                                                                                                                                                                                                                    |
| [monitoredSubscriptionsGetSample.js][monitoredsubscriptionsgetsample]                         | get a MonitoredSubscriptionProperties x-ms-original-file: 2026-06-01/MonitoredSubscriptions_Get.json                                                                                                                                                                                                                          |
| [monitoredSubscriptionsListSample.js][monitoredsubscriptionslistsample]                       | list MonitoredSubscriptionProperties resources by NewRelicMonitorResource x-ms-original-file: 2026-06-01/MonitoredSubscriptions_List.json                                                                                                                                                                                     |
| [monitoredSubscriptionsUpdateSample.js][monitoredsubscriptionsupdatesample]                   | update a MonitoredSubscriptionProperties x-ms-original-file: 2026-06-01/MonitoredSubscriptions_Update.json                                                                                                                                                                                                                    |
| [monitorsCreateOrUpdateSample.js][monitorscreateorupdatesample]                               | creates a new or updates an existing New Relic monitor resource in your Azure subscription. This sets up the integration between Azure and your New Relic account, enabling observability and monitoring of your Azure resources through New Relic x-ms-original-file: 2026-06-01/Monitors_CreateOrUpdate_MaximumSet_Gen.json |
| [monitorsDeleteSample.js][monitorsdeletesample]                                               | deletes an existing New Relic monitor resource from your Azure subscription, removing the integration and stopping the observability of your Azure resources through New Relic x-ms-original-file: 2026-06-01/Monitors_Delete_MaximumSet_Gen.json                                                                             |
| [monitorsGetMetricRulesSample.js][monitorsgetmetricrulessample]                               | retrieves the metric rules that are configured in the New Relic monitor resource x-ms-original-file: 2026-06-01/Monitors_GetMetricRules_MaximumSet_Gen.json                                                                                                                                                                   |
| [monitorsGetMetricStatusSample.js][monitorsgetmetricstatussample]                             | retrieves the metric status that are configured in the New Relic monitor resource x-ms-original-file: 2026-06-01/Monitors_GetMetricStatus_MaximumSet_Gen.json                                                                                                                                                                 |
| [monitorsGetSample.js][monitorsgetsample]                                                     | retrieves the properties and configuration details of a specific New Relic monitor resource, providing insight into its setup and status x-ms-original-file: 2026-06-01/Monitors_Get_MaximumSet_Gen.json                                                                                                                      |
| [monitorsLatestLinkedSaaSSample.js][monitorslatestlinkedsaassample]                           | returns the latest SaaS linked to the newrelic organization of the underlying monitor. x-ms-original-file: 2026-06-01/Monitors_LatestLinkedSaaS_MaximumSet_Gen.json                                                                                                                                                           |
| [monitorsLinkSaaSSample.js][monitorslinksaassample]                                           | links a new SaaS to the newrelic organization of the underlying monitor. x-ms-original-file: 2026-06-01/Monitors_LinkSaaS.json                                                                                                                                                                                                |
| [monitorsListAppServicesSample.js][monitorslistappservicessample]                             | lists the app service resources currently being monitored by the New Relic resource, helping you understand which app services are under monitoring x-ms-original-file: 2026-06-01/Monitors_ListAppServices_MaximumSet_Gen.json                                                                                               |
| [monitorsListByResourceGroupSample.js][monitorslistbyresourcegroupsample]                     | retrieves a list of all New Relic monitor resources either a specific resource group x-ms-original-file: 2026-06-01/Monitors_ListByResourceGroup_MaximumSet_Gen.json                                                                                                                                                          |
| [monitorsListBySubscriptionSample.js][monitorslistbysubscriptionsample]                       | lists all New Relic monitor resources either within a specific subscription x-ms-original-file: 2026-06-01/Monitors_ListBySubscription_MaximumSet_Gen.json                                                                                                                                                                    |
| [monitorsListHostsSample.js][monitorslisthostssample]                                         | lists all VM resources currently being monitored by the New Relic monitor resource, helping you manage observability x-ms-original-file: 2026-06-01/Monitors_ListHosts_MaximumSet_Gen.json                                                                                                                                    |
| [monitorsListLinkedResourcesSample.js][monitorslistlinkedresourcessample]                     | lists all Azure resources that are linked to the same New Relic organization as the specified monitor resource, helping you understand the scope of integration x-ms-original-file: 2026-06-01/LinkedResources_List.json                                                                                                      |
| [monitorsListMonitoredResourcesSample.js][monitorslistmonitoredresourcessample]               | lists all Azure resources that are currently being monitored by the specified New Relic monitor resource, providing insight into the coverage of your observability setup x-ms-original-file: 2026-06-01/Monitors_ListMonitoredResources_MaximumSet_Gen.json                                                                  |
| [monitorsRefreshIngestionKeySample.js][monitorsrefreshingestionkeysample]                     | refreshes the ingestion key for all monitors linked to the same account associated to the underlying monitor. x-ms-original-file: 2026-06-01/Monitors_RefreshIngestionKey.json                                                                                                                                                |
| [monitorsResubscribeSample.js][monitorsresubscribesample]                                     | a long-running resource action. x-ms-original-file: 2026-06-01/Monitors_Resubscribe.json                                                                                                                                                                                                                                      |
| [monitorsSwitchBillingSample.js][monitorsswitchbillingsample]                                 | switches the billing for the New Relic Monitor resource to be billed by Azure Marketplace x-ms-original-file: 2026-06-01/Monitors_SwitchBilling_MaximumSet_Gen.json                                                                                                                                                           |
| [monitorsUpdateSample.js][monitorsupdatesample]                                               | updates an existing New Relic monitor resource from your Azure subscription x-ms-original-file: 2026-06-01/Monitors_Update_MaximumSet_Gen.json                                                                                                                                                                                |
| [monitorsVmHostPayloadSample.js][monitorsvmhostpayloadsample]                                 | returns the payload that needs to be passed in the request body for installing the New Relic agent on a VM, providing the necessary configuration details x-ms-original-file: 2026-06-01/Monitors_VmHostPayload_MaximumSet_Gen.json                                                                                           |
| [operationsListSample.js][operationslistsample]                                               | list the operations for the provider x-ms-original-file: 2026-06-01/Operations_List_MaximumSet_Gen.json                                                                                                                                                                                                                       |
| [organizationsListSample.js][organizationslistsample]                                         | lists all the New Relic organizations linked to your email address, helping you understand the existing organizations that have been created x-ms-original-file: 2026-06-01/Organizations_List_MaximumSet_Gen.json                                                                                                            |
| [plansListSample.js][planslistsample]                                                         | lists the plans data linked to your organization, providing an overview of the available plans x-ms-original-file: 2026-06-01/Plans_List_MaximumSet_Gen.json                                                                                                                                                                  |
| [saaSActivateResourceSample.js][saasactivateresourcesample]                                   | resolve the token to get the SaaS resource ID and activate the SaaS resource x-ms-original-file: 2026-06-01/ActivateSaaS.json                                                                                                                                                                                                 |
| [tagRulesCreateOrUpdateSample.js][tagrulescreateorupdatesample]                               | creates a new set of tag rules for a specific New Relic monitor resource, determining which Azure resources are monitored based on their tags x-ms-original-file: 2026-06-01/TagRules_CreateOrUpdate_MaximumSet_Gen.json                                                                                                      |
| [tagRulesDeleteSample.js][tagrulesdeletesample]                                               | deletes a tag rule set for a given New Relic monitor resource, removing fine-grained control over observability based on resource tags x-ms-original-file: 2026-06-01/TagRules_Delete_MaximumSet_Gen.json                                                                                                                     |
| [tagRulesGetSample.js][tagrulesgetsample]                                                     | retrieves the details of the tag rules for a specific New Relic monitor resource, providing insight into its setup and status x-ms-original-file: 2026-06-01/TagRules_Get_MaximumSet_Gen.json                                                                                                                                 |
| [tagRulesListByNewRelicMonitorResourceSample.js][tagruleslistbynewrelicmonitorresourcesample] | lists all tag rules associated with a specific New Relic monitor resource, helping you manage and audit the rules that control resource monitoring x-ms-original-file: 2026-06-01/TagRules_ListByNewRelicMonitorResource_MaximumSet_Gen.json                                                                                  |
| [tagRulesUpdateSample.js][tagrulesupdatesample]                                               | updates the tag rules for a specific New Relic monitor resource, allowing you to modify the rules that control which Azure resources are monitored x-ms-original-file: 2026-06-01/TagRules_Update_MaximumSet_Gen.json                                                                                                         |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node accountsListSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node accountsListSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accountslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/accountsListSample.js
[billinginfogetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/billingInfoGetSample.js
[connectedpartnerresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/connectedPartnerResourcesListSample.js
[monitoredsubscriptionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitoredSubscriptionsCreateOrUpdateSample.js
[monitoredsubscriptionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitoredSubscriptionsDeleteSample.js
[monitoredsubscriptionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitoredSubscriptionsGetSample.js
[monitoredsubscriptionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitoredSubscriptionsListSample.js
[monitoredsubscriptionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitoredSubscriptionsUpdateSample.js
[monitorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsCreateOrUpdateSample.js
[monitorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsDeleteSample.js
[monitorsgetmetricrulessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsGetMetricRulesSample.js
[monitorsgetmetricstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsGetMetricStatusSample.js
[monitorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsGetSample.js
[monitorslatestlinkedsaassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsLatestLinkedSaaSSample.js
[monitorslinksaassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsLinkSaaSSample.js
[monitorslistappservicessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsListAppServicesSample.js
[monitorslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsListByResourceGroupSample.js
[monitorslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsListBySubscriptionSample.js
[monitorslisthostssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsListHostsSample.js
[monitorslistlinkedresourcessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsListLinkedResourcesSample.js
[monitorslistmonitoredresourcessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsListMonitoredResourcesSample.js
[monitorsrefreshingestionkeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsRefreshIngestionKeySample.js
[monitorsresubscribesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsResubscribeSample.js
[monitorsswitchbillingsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsSwitchBillingSample.js
[monitorsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsUpdateSample.js
[monitorsvmhostpayloadsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/monitorsVmHostPayloadSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/operationsListSample.js
[organizationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/organizationsListSample.js
[planslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/plansListSample.js
[saasactivateresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/saaSActivateResourceSample.js
[tagrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/tagRulesCreateOrUpdateSample.js
[tagrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/tagRulesDeleteSample.js
[tagrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/tagRulesGetSample.js
[tagruleslistbynewrelicmonitorresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/tagRulesListByNewRelicMonitorResourceSample.js
[tagrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/newrelicobservability/arm-newrelicobservability/samples/v2/javascript/tagRulesUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-newrelicobservability
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/newrelicobservability/arm-newrelicobservability/README.md
